# ncpeek

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: api_example.py
ncpeek/: __main__.py  client.py  netconf_devices.py  netconf_parsers.py  netconf_session.py
ncpeek/args/: arg_parser.py  parse_settings.py  xpath_parse.py
ncpeek/devices/: devnet_xe_sandbox.json  devnet_xr_sandbox.json
ncpeek/factory/: factory_mappings.py  factory_parsers.py
ncpeek/filters/: Cisco-IOS-XR-facts.xml  Cisco-IOS-XR-hostname.xml
ncpeek/parsers/: cisco_ios_xe_interfaces_oper.py  cisco_ios_xe_isis_oper.py  cisco_ios_xe_memory_oper.py  cisco_xe_ietf_interfaces.py  default_parser.py  remove_namespaces.py
ncpeek/tests/: test_client.py
ncpeek/tests/test_args/: test_parse_settings.py
ncpeek/tests/test_parsers/: test_cisco_ios_xe_interfaces_oper.py  test_cisco_ios_xe_memory_oper.py  test_default_parser.py
ncpeek/tests/test_utils/: test_text_utils.py
ncpeek/utils/: file_utils.py  text_utils.py
tests/: README.md  test_netconf_devices.py  test_netconf_parsers.py
tests/test_args/: test_arg_parser.py  test_xpath_parse.py
tests/test_factory/: test_factory_parsers.py
tests/test_parsers/: test_cisco_ios_xe_interfaces_oper.py  test_cisco_ios_xe_isis_oper.py  test_cisco_xe_ietf_interfaces.py  test_remove_namespaces.py
tests/test_utils/: test_file_utils.py
