[tool.poetry]
name = "ncpeek"
version = "0.1.0"
description = ""
authors = ["Jesus Illescas"]
readme = "README.md"
packages = [{include = "ncpeek"}]

[tool.poetry.dependencies]
python = "^3.11"
ncclient = "^0.6.15"
xmltodict = "^0.13.0"
paramiko = "<=2.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
